feat(auth): 实现登录失败限流与账户锁定功能
- 新增登录失败尝试次数统计及锁定机制
- 登录失败时记录失败次数并提示剩余尝试次数
- 失败次数过多时锁定账号15分钟，阻止登录
- 成功登录后清除失败记录
- 新增登录错误码 ACCOUNT_LOCKED 支持账户锁定状态提示

feat(auth): 新增超级管理员API密钥认证过滤器

- 实现AdminApiKeyFilter支持请求头Authorization认证
- 配置超级管理员固定API密钥123验证
- 认证成功后赋予管理员角色，简化开发和管理
- 过滤器优先级高于JWT认证过滤器

feat(auth): 添加超级管理员账户自动初始化功能

- 应用启动时自动检测并创建默认管理员账号
- 默认用户名admin，密码admin123，角色为SUPER_ADMIN
- 确保已有管理员账户角色标记正确
- 启动日志提示安全警告，建议修改初始密码

feat(config): 增加JWT密钥安全校验组件

- 启动时验证jwt.secret长度是否满足最小32字节要求
- 检测是否使用开发环境默认密钥及不安全关键字
- 提供详细启动日志警告提示安全隐患
- 指导生产环境必须自定义安全密钥

feat(config): 增加基于环境变量的CORS跨域配置支持

- 支持通过CORS_ALLOWED_ORIGINS环境变量配置允许域名列表
- 生产环境需设置具体域名，默认允许本地开发地址
- 允许跨域方法包括GET、POST、PUT、DELETE、OPTIONS
- 支持携带证书，设置跨域最大缓存时间为3600秒

perf(task): 优化任务结果消息处理与失败重试机制

- 实现MessageRetryHandler组件处理失败消息重试逻辑
- 配置最大重试次数为3次，延迟重试间隔1分钟
- 超过重试次数后消息发送到死信队列
- RabbitMQ配置中添加主交换机、死信交换机和重试交换机
- 创建重试队列和死信队列及相应绑定关系
- 消费失败消息自动重试，减少消息丢失风险

refactor(entity): 统一添加逻辑删除字段与乐观锁版本控制

- 在UserEntity、FileEntity、TaskEntity、QuotaEntity、DocumentEntity中新增deleted字段支持逻辑删除
- 设置deleted字段自动填充默认值为0
- 新增version字段实现乐观锁控制，避免数据并发冲突
- 修改字段注解，支持MyBatis Plus自动填充创建和更新时间

fix(auth): 修改JWT token过期时间为2小时

- 将accessToken过期时间修改为7200秒（2小时）
- refreshToken过期时间保持7天不变
- 调整相关常量和返回字段值
- 更新application.yaml配置中jwt.secret为开发环境默认密钥

fix(auth): JWT认证失败时返回标准JSON错误响应

- JwtAuthenticationFilter捕获异常时返回401状态码
- 返回统一格式JSON包含错误码和错误消息
- 提升前端对JWT认证失败的友好处理能力