@@ -1,7 +1,9 @@
 package com.benmake.transafe.config;
 
+import com.benmake.transafe.auth.filter.AdminApiKeyFilter;
 import com.benmake.transafe.auth.filter.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -22,15 +24,17 @@ import java.util.List;
 /**
  * Spring Security 配置
  *
- * @author TYPO
+ * @author JTP
  * @since 2026-03-30
  */
+@Slf4j
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final AdminApiKeyFilter adminApiKeyFilter;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -46,18 +50,54 @@ public class SecurityConfig {
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
+                // 管理员 API 密钥认证（优先级最高）
+                .addFilterBefore(adminApiKeyFilter, UsernamePasswordAuthenticationFilter.class)
+                // JWT 认证
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
+    /**
+     * CORS 跨域配置
+     *
+     * <p>生产环境应通过环境变量 CORS_ALLOWED_ORIGINS 设置允许的域名列表。</p>
+     *
+     * <h3>配置方式</h3>
+     * <pre>
+     * # 多个域名用逗号分隔
+     * export CORS_ALLOWED_ORIGINS=https://example.com,https://app.example.com
+     * </pre>
+     *
+     * @return CorsConfigurationSource CORS 配置源
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
+
+        // 从环境变量读取允许的域名列表
+        String allowedOriginsEnv = System.getenv("CORS_ALLOWED_ORIGINS");
+        List<String> allowedOrigins;
+
+        if (allowedOriginsEnv != null && !allowedOriginsEnv.isBlank()) {
+            allowedOrigins = Arrays.asList(allowedOriginsEnv.split(","));
+            log.info("CORS 允许来源：{}", allowedOrigins);
+        } else {
+            // 开发环境默认值
+            allowedOrigins = Arrays.asList(
+                "http://localhost:3000",
+                "http://localhost:5173",
+                "http://127.0.0.1:3000",
+                "http://127.0.0.1:5173"
+            );
+            log.warn("CORS_ALLOWED_ORIGINS 未配置，使用开发环境默认值：{}。生产环境必须配置！", allowedOrigins);
+        }
+
+        configuration.setAllowedOrigins(allowedOrigins);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
